--- a/app/src/main/res/layout/content_notification.xml
+++ b/app/src/main/res/layout/content_notification.xml
@@ -28,7 +28,10 @@
         android:layout_marginStart="32dp"
         android:text="Add"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/textForRed"
+        />
 
     <Button
         android:id="@+id/notiBack"
@@ -38,20 +41,21 @@
         android:layout_marginEnd="32dp"
         android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/redPrimary"
+        android:textColor="@color/textForRed"
+        />
 
-    <ListView
-        android:id="@+id/notiList"
-        android:layout_width="314dp"
-        android:layout_height="388dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline"
-        app:layout_constraintEnd_toStartOf="@+id/guideline3"
-        app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical"
+
+        app:layout_constraintTop_toBottomOf="@+id/textView2">
+
+
+    </android.support.v7.widget.RecyclerView>
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
@@ -73,6 +77,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="367dp" />
+
+
 
 
 </android.support.constraint.ConstraintLayout>
