--- a/app/src/main/res/layout/content_plant.xml
+++ b/app/src/main/res/layout/content_plant.xml
@@ -26,7 +26,7 @@
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/tree_1" />
+        />
 
     <ImageView
         android:id="@+id/imageView6"
@@ -173,6 +173,18 @@
         app:layout_constraintBottom_toTopOf="@+id/guideline6"
         app:layout_constraintEnd_toEndOf="@+id/imgLight"
         app:layout_constraintStart_toStartOf="@+id/imgLight" />
+
+    <TextView
+        android:id="@+id/testDrag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
