--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,32 +6,29 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_main"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_baseline_home_24px"
             android:title="@string/home" />
         <item
             android:id="@+id/nav_notificaion"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_baseline_notification_important_24px"
             android:title="@string/notification" />
         <item
             android:id="@+id/nav_statistic"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_baseline_assessment_24px"
             android:title="@string/statistic" />
         <item
             android:id="@+id/nav_plant"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_baseline_spa_24px"
             android:title="@string/plant" />
 
     </group>
 
-    <item android:title="@string/account">
+    <item android:title="Log out">
         <menu>
-            <item
-                android:id="@+id/nav_setting"
-                android:icon="@drawable/ic_menu_send"
-                android:title="@string/setting" />
+
             <item
                 android:id="@+id/nav_logout"
-                android:icon="@drawable/ic_menu_send"
+                android:icon="@drawable/ic_baseline_settings_20px"
                 android:title="@string/log_out" />
         </menu>
     </item>
