--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="textForGreen">#000000</color>
     <color name="textForRed">#ffffff</color>
     <color name="splash">#56a731</color>
+    <color name="yellowB">#DCDB1E</color>
 
 </resources>
