--- a/app/src/main/res/layout/content_statistic.xml
+++ b/app/src/main/res/layout/content_statistic.xml
@@ -11,39 +11,39 @@
 
     <Button
         android:id="@+id/Lbtn"
-        android:layout_width="wrap_content"
+        android:layout_width="86dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
-        android:background="@color/candy_dark"
-        android:text="Light"
+        android:layout_marginEnd="8dp"
+        android:background="@color/yellowB"
+        android:text="Eye Sight"
         android:textColor="@color/textForRed"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/wBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:background="@color/sea_dark"
         android:text="Water"
         android:textColor="@color/textForRed"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.github.mikephil.charting.charts.BarChart
 
         android:id="@+id/statBarchart"
         android:layout_width="match_parent"
+        android:paddingTop="20dp"
         android:layout_height="300dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/testValue">
 
     </com.github.mikephil.charting.charts.BarChart>
 
@@ -54,9 +54,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="All Statistic Chart"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/statBarchart" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
