--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,7 +11,7 @@
         <item
             android:id="@+id/nav_notificaion"
             android:icon="@drawable/ic_baseline_notification_important_24px"
-            android:title="@string/notification" />
+            android:title="@string/reminder_nav" />
         <item
             android:id="@+id/nav_statistic"
             android:icon="@drawable/ic_baseline_assessment_24px"
